--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'edu.uic.market'
+group = 'edu.uic.marketplace'
 version = '0.0.1-SNAPSHOT'
 description = 'Campus marketplace web app for UIC students'
 
@@ -25,49 +25,49 @@ repositories {
 }
 
 dependencies {
+	// Spring
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	// DB Driver
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
-	
+
+	// Devtools
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	// JSON Web Token (JJWT)
-	implementation("io.jsonwebtoken:jjwt-api:0.11.5")
-	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
-	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-	// Spring Mail
-	implementation("org.springframework.boot:spring-boot-starter-mail")
+	// OpenAPI
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
-	// Spring Data Redis
-	implementation("org.springframework.boot:spring-boot-starter-data-redis")
-
-	// Mockito
+	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.mockito:mockito-core'
 	testImplementation 'org.mockito:mockito-junit-jupiter'
-
+	testImplementation 'com.h2database:h2'
 	testImplementation 'org.testcontainers:junit-jupiter:1.20.2'
 	testImplementation 'org.testcontainers:mysql:1.20.2'
-//	testImplementation 'org.testcontainers:redis:1.20.2'
 	testImplementation 'com.icegreen:greenmail:2.1.1'
-
-	testImplementation 'com.h2database:h2'
+	// testImplementation 'org.testcontainers:redis:1.20.2'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	systemProperty "spring.profiles.active", "test"
 }
