--- a/backend/src/main/resources/application.properties.example
+++ b/backend/src/main/resources/application.properties.example
@@ -1,10 +1,4 @@
 spring.application.name=UIC Marketplace
-
-spring.datasource.url=${DB_URL:jdbc:h2:mem:testdb}
-spring.datasource.username=${DB_USERNAME:sa}
-spring.datasource.password=${DB_PASSWORD:}
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+management.endpoints.web.exposure.include=health,info
 
 JAVA_TOOL_OPTIONS=-Duser.timezone=UTC
