--- a/backend/src/main/resources/application.yml.example
+++ b/backend/src/main/resources/application.yml.example
@@ -5,17 +5,14 @@ spring:
   config:
     import: optional:file:.env.properties
 
-  jpa:
-    show-sql: true
-    properties:
-      hibernate.format_sql: true
+  profiles:
+    active: local
 
 server:
   port: 8080
   servlet:
     context-path: /
 
-jwt:
-  access-token-expiration: 3600
-  refresh-token-expiration: 604800
-  secret: ${JWT_SECRET}
+logging:
+  level:
+    root: INFO
