update: refine .env.properties.example configuration

--- a/backend/.env.properties.example
+++ b/backend/.env.properties.example
@@ -1,5 +1,5 @@
 ########################################
-# 🌐 Environment Configuration Example
+# Environment Configuration Example
 # Copy this file as `.env.properties` and fill in your real credentials
 ########################################
 
