--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	// Flyway
+	implementation 'org.flywaydb:flyway-core:10.19.0'
+	implementation 'org.flywaydb:flyway-mysql:10.19.0'
+
 	// DB Driver
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
