feat(listing): integrate S3-based image upload and cleanup logic
- Added S3Service for image upload/delete using AWS SDK
- Integrated image upload into ListingServiceImpl create/update flows
- Implemented deleteFiles() for batch removal and rollback handling
- Added multipart configuration and AWS region/bucket setup

--- a/backend/.env.properties.example
+++ b/backend/.env.properties.example
@@ -10,6 +10,14 @@ DB_USERNAME=your_db_username
 DB_PASSWORD=your_db_password
 
 # ----------------------------------------
+# AWS
+# ----------------------------------------
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_secret_access_key
+AWS_REGION=your_region
+S3_BUCKET=your_bucket
+
+# ----------------------------------------
 # Gmail SMTP (Mail Sender)
 # (Use Gmail App Password, not your actual Gmail password)
 # ----------------------------------------
@@ -22,7 +30,7 @@ MAIL_PASSWORD=your_app_password
 JWT_SECRET=your_jwt_secret_key
 
 # ----------------------------------------
-# ⚙️ System / JVM Options
+# System / JVM Options
 # ----------------------------------------
 JAVA_TOOL_OPTIONS=-Duser.timezone=UTC
 
