--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	// AWS
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.681'
+
 	// Flyway
 	implementation 'org.flywaydb:flyway-core:10.19.0'
 	implementation 'org.flywaydb:flyway-mysql:10.19.0'
