--- a/backend/src/main/resources/application-local.yml.example
+++ b/backend/src/main/resources/application-local.yml.example
@@ -11,12 +11,17 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
     open-in-view: false
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
 
   data:
     redis:
@@ -37,6 +42,11 @@ spring:
           starttls:
             enable: true
 
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 50MB
+
 jwt:
   secret: ${JWT_SECRET:local_dev_secret}
   access-token-expiration: 3600          # Access token (sec)
@@ -48,11 +58,9 @@ logging:
     org.hibernate.SQL: DEBUG
     org.springframework.web: INFO
 
-server:
-  port: 8080
-  servlet:
-    context-path: /
-
-spring:
-  application:
-    name: uic-marketplace
+cloud:
+  aws:
+    region:
+      static: ${AWS_REGION}
+    s3:
+      bucket: ${S3_BUCKET}
