add frontend structure

--- a/frontend/uicircle/tsconfig.app.json
+++ b/frontend/uicircle/tsconfig.app.json
@@ -16,6 +16,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -23,6 +28,7 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
+
   },
   "include": ["src"]
 }
