--- a/frontend/uicircle/package.json
+++ b/frontend/uicircle/package.json
@@ -11,15 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "leaflet": "^1.9.4",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1",
-    "react-leaflet": "^5.0.0-rc.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/leaflet": "^1.9.21",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
