--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 	// DB Driver
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+
+	runtimeOnly 'com.h2database:h2'
+
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
