--- a/backend/src/main/resources/application-render.yml
+++ b/backend/src/main/resources/application-render.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:testdb;MODE=MySQL;DATABASE_TO_UPPER=false;NON_KEYWORDS=VALUE
     driver-class-name: org.h2.Driver
     username: sa
     password:
