feat(listing): integrate Leaflet map for selecting location in CreateListing page
- Added LocationPicker component
- Added react-leaflet, leaflet and @types/leaflet
- Updated CreateListingForm and CreateListingPage with location fields
- Fixed merge conflict in router and completed integration

--- a/frontend/uicircle/tsconfig.node.json
+++ b/frontend/uicircle/tsconfig.node.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "types": ["node"],
-    "allowSyntheticDefaultImports": true
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2020",
+    "types": ["node"]
   },
   "include": ["vite.config.ts"]
 }
+
