implement: email verification for signup, update password

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	implementation 'com.sendgrid:sendgrid-java:4.10.1'
+
 	// AWS
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.681'
 
