--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,9 @@ management.endpoints.web.exposure.include=health,info
 frontend.origins=${FRONT_END_URLS:http://localhost:5173}
 
 JAVA_TOOL_OPTIONS=-Duser.timezone=UTC
+
+SPRING_PROFILES_ACTIVE=local
+
+logging.level.root=INFO
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.springframework.web=INFO
