--- a/backend/.env.properties.example
+++ b/backend/.env.properties.example
@@ -1,47 +1,34 @@
-########################################
-# Environment Configuration Example
-# Copy this file as `.env.properties` and fill in your real credentials
-########################################
+# MySQL
+DB_URL=jdbc:mysql://127.0.0.1:3306/uic_market?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+DB_USERNAME=your_mysql_user
+DB_PASSWORD=your_mysql_password
 
-# ----------------------------------------
-# MySQL Database
-# ----------------------------------------
-DB_USERNAME=your_db_username
-DB_PASSWORD=your_db_password
+# Allowed CORS Frontend URL(s)
+FRONTEND_URL=http://localhost:5173
 
-# ----------------------------------------
-# AWS
-# ----------------------------------------
+# SendGrid API
+SENDGRID_API_KEY=your_sendgrid_api_key
+
+# Mail
+APP_MAIL_FROM=no-reply@example.com
+
+# AWS S3 Credentials
 AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_access_key
-AWS_REGION=your_region
-S3_BUCKET=your_bucket
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+AWS_REGION=us-east-2
+S3_BUCKET=your_s3_bucket_name
 
-# ----------------------------------------
-# Gmail SMTP (Mail Sender)
-# (Use Gmail App Password, not your actual Gmail password)
-# ----------------------------------------
-MAIL_USERNAME=your_email@gmail.com
-MAIL_PASSWORD=your_app_password
+# JWT
+JWT_SECRET=your_jwt_secret_base64
+JWT_EXPIRATION=900000
 
-# ----------------------------------------
-# JWT Configuration
-# ----------------------------------------
-JWT_SECRET=your_jwt_secret_key
-
-# ----------------------------------------
-# System / JVM Options
-# ----------------------------------------
+# Timezone
 JAVA_TOOL_OPTIONS=-Duser.timezone=UTC
 
-# ----------------------------------------
 # Spring Profile
-# ----------------------------------------
 SPRING_PROFILES_ACTIVE=local
 
-# ----------------------------------------
-# Logging Level (Optional overrides)
-# ----------------------------------------
+# Logging
 logging.level.root=INFO
 logging.level.org.hibernate.SQL=OFF
 logging.level.org.springframework.web=INFO
