--- a/backend/src/main/resources/application.properties.example
+++ b/backend/src/main/resources/application.properties.example
@@ -1,4 +1,14 @@
 spring.application.name=UIC Marketplace
+
 management.endpoints.web.exposure.include=health,info
 
+# --- CORS ---
+frontend.origins=${FRONT_END_URLS:http://localhost:5173}
+
 JAVA_TOOL_OPTIONS=-Duser.timezone=UTC
+
+SPRING_PROFILES_ACTIVE=local
+
+logging.level.root=INFO
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.springframework.web=INFO
