--- a/backend/src/main/resources/application-render.yml
+++ b/backend/src/main/resources/application-render.yml
@@ -4,13 +4,36 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+    # HikariCP connection pooling for performance
+    hikari:
+      minimum-idle: 5
+      maximum-pool-size: 20
+      idle-timeout: 30000
+      pool-name: UICircle-HikariCP
+      max-lifetime: 1800000
+      connection-timeout: 20000
+      leak-detection-threshold: 60000
+      # Connection validation
+      connection-test-query: SELECT 1
+      validation-timeout: 5000
 
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        default_batch_fetch_size: 20
+        default_batch_fetch_size: 50
+        jdbc:
+          batch_size: 25
+          batch_versioned_data: true
+        order_inserts: true
+        order_updates: true
+        # Connection handling
+        connection:
+          provider_disables_autocommit: true
+        # Query optimization
+        query:
+          in_clause_parameter_padding: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
     open-in-view: false
@@ -22,6 +45,11 @@ spring:
 
 server:
   port: ${PORT:8080}
+  # Compression for faster responses
+  compression:
+    enabled: true
+    mime-types: application/json,application/xml,text/html,text/xml,text/plain
+    min-response-size: 1024
 
 jwt:
   secret: ${JWT_SECRET}
